--- a/about.html
+++ b/about.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2021年折腾记录</title>
     <style>
+        *{
+            margin:0;
+            padding:0;
+        }
+        
         a {
             text-decoration: none;
             color: yellowgreen;
