Update and rename about.html to 2021.html
modify linkage

--- a/2021.html
+++ b/2021.html
@@ -159,8 +159,8 @@
             <h2 class="header_title">2021年折腾记录</h2>
             <div class="ribbon">
                 <a href="./index.html"><span>首页</span></a>
-                <a href="./about.html"><span>2021年折腾记录</span></a>
-                <a href="./form.html"><span>妈呀，这不是你！</span></a>
+                <a href="./2021.html"><span>2021年折腾记录</span></a>
+                <a href="./about.html"><span>妈呀，这不是你！</span></a>
             </div>
         </div>
 
