--- a/2021.html
+++ b/2021.html
@@ -46,17 +46,18 @@
             margin-left: auto;
             margin-right: auto;
         }
-
+        
         .header_title {
             position: absolute;
             color: white;
-            top: 23rem;
+            top: -15rem;
             left: 0;
             right: 0;
             font-size: 1.75rem;
             font-weight: 550;
             bottom: 0;
             width: 50rem;
+            height:min-content;
             margin: auto;
             text-align: center;
         }
