--- a/2021.html
+++ b/2021.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2021年折腾记录</title>
     <style>
-        *{
-            margin:0;
-            padding:0;
+        * {
+            margin: 0;
+            padding: 0;
         }
-        
+
         a {
             text-decoration: none;
             color: yellowgreen;
@@ -46,19 +47,14 @@
             margin-left: auto;
             margin-right: auto;
         }
-        
+
         .header_title {
-            position: absolute;
             color: white;
-            top: -15rem;
-            left: 0;
-            right: 0;
-            font-size: 1.75rem;
+            font-size: 1.75em;
             font-weight: 550;
-            bottom: 0;
-            width: 50rem;
-            height:min-content;
-            margin: auto;
+            height: min-content;
+            margin: 0 auto;
+            padding-top: 17rem;
             text-align: center;
         }
 
@@ -150,19 +146,19 @@
             border-left: 0.5rem solid #9B8651;
             border-bottom: 0.5rem solid #fff;
         }
-
     </style>
 </head>
 
 <body>
     <div id="container">
         <div id="header">
-            <h2 class="header_title">2021年折腾记录</h2>
+
             <div class="ribbon">
                 <a href="./index.html"><span>首页</span></a>
                 <a href="./2021.html"><span>2021年折腾记录</span></a>
                 <a href="./about.html"><span>妈呀，这不是你！</span></a>
             </div>
+            <h2 class="header_title">2021年折腾记录</h2>
         </div>
 
         <div id="main">
@@ -278,7 +274,8 @@ IPDT64 Failed
             <p>这几天学会了VS Code的一个新功能“格式化”，在装上了PEP8之后，对Python的代码格式化真心好用啊，代码之间留空变得特别美观了。</p>
             <P>而它对C语言的注释更是让人有一种得了强迫症的舒爽感，能够整整齐齐地把上下行之间的斜杠对齐，太舒心了。有一种写出来的代码像诗作一样的感觉了。</P>
             <p>在编辑批处理命令的时候，又学会了用Shift + Alt + I的组合键调用多个光标来同时操作多行。这下再也不用调用Excel来做这种活了，在合并多个视频文件的时候可就方便太多了。</p>
-            <p>逛知乎的时候三天两头看到有人介绍CSS和HTML的文章，我想起经历过的互联网泡沫时代，以及中学时候参加班级网页制作大赛的那些岁月。那时候大家都用什么网页三剑客，时过境迁，flash之类的东西已经成了过眼云烟。</p>
+            <p>逛知乎的时候三天两头看到有人介绍CSS和HTML的文章，我想起经历过的互联网泡沫时代，以及中学时候参加班级网页制作大赛的那些岁月。那时候大家都用什么网页三剑客，时过境迁，flash之类的东西已经成了过眼云烟。
+            </p>
             <P>技术界现在的流行的名词一套一套的，什么Node.js，什么vue，什么Jekyll，又是各种奇奇怪怪的东西。我还停留在php是最好的语言的时代，世界就开始流行起我跟不上趟的技术了。</P>
             <p>好在我也不是半截身子入黄土的人，跟着B站视频，跟着W3school后面学了一点html和css的基本知识，结合CSDN上的一些文章，决定自己来搞一个试验性质的网页来试试水。</P>
             <P>尝试用Github Page提供的功能来做了几个简单的HTML页面。</p>
