--- a/about.html
+++ b/about.html
@@ -138,7 +138,7 @@
                 <input class="inputs" type="text" value="https://developer.mozilla.org/en-US/docs/Learn">
             </div>
             <div class="btn_submit">
-                <a href="https://fyqc.github.com">
+                <a href="https://github.com/fyqc">
                     <button class="btn">我的Github</button></a>
                 <a href="./index.html" class="back"><button class="home_href">返回首页</button></a>
             </div>
