--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
             padding: 0.5rem;
         }
 
-        .header #header_text {
+        #header_text {
             color: white;
             font-size: 1.25em;
             font-weight: 500;
             height: min-content;
-            margin: 0 auto;
-            padding-top: 13rem;
+            margin: 0;
+            padding: 13rem 20rem;
             text-align: center;
         }
 
@@ -183,34 +183,35 @@
             align-items: center;
             margin: auto;
             display: flex;
-            justify-content: space-between;
+            /* justify-content: space-between; */
+            flex-direction: row;
             font-size: 1.3rem;
         }
 
         #icon_1 {
-            display: inline-block;
+            margin:auto;
             vertical-align: top;
             width: 15rem;
         }
 
         #icon_2 {
-            display: inline-block;
+            margin:auto;
             vertical-align: top;
             width: 15rem;
         }
 
         #icon_3 {
-            display: inline-block;
+            margin:auto;
             vertical-align: top;
             width: 15rem;
         }
 
         #icon_4 {
-            display: inline-block;
+            margin:auto;
             vertical-align: top;
             width: 15rem;
         }
-
+        
         span {
             display: block;
             text-align: center;
