--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                 <div class="ribbon">
                     <a href="./index.html"><span>首页</span></a>
                     <a href="./2021.html"><span>2021年折腾记录</span></a>
-                    <a href="./about.html"><span>妈呀，这不是你！</span></a>
+                    <a href="./2020.html"><span>2020折腾记录</span></a>
                 </div>
                 <div id="header_text">
                     <div>
