--- a/tokuten/appleaudio.html
+++ b/tokuten/appleaudio.html
@@ -1,55 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- If you embed audio or video in your website, you should use HTML5.
-
-HTML5 is the next major version of HTML, the primary standard that determines how web content interacts with browsers. HTML5 supports audio and video playback natively in the browser, without requiring a plug-in. With HTML5, you can add media to a webpage with just a line or two of code.
-
-The HTML5 media elements provide simple fallback for browsers that still need to use plug-ins, so you can update your website to HTML5 today and still be compatible with older browsers.
-
-When you use HTML5, you can create your own customized media controllers for rich interactivity using web-standard CSS and JavaScript.
-
-The HTML5 <audio> and <video> tags make it simple to add media to your website. Just include the <audio> or <video> element, use the src attribute to identify the media source, and include the controls attribute.
-
-<video src="mymovie.mp4" controls></video>
-
-There are no plug-ins to install or configure. The audio or video downloads and plays in your webpage with built-in controls. -->
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test Audio Play on iPhone</title>
-</head>
-<body>
-    <audio src="w20210520.mp3" id="CW" autoplay preload></audio>
-
-    <script>    $(function () {
-            audioAutoPlay('CW');
-        });
-
-        function audioAutoPlay(id) {
-
-            var audio = document.getElementById(id),
-                play = function () {
-                    audio.play();
-                    document.removeEventListener("touchstart", play, false);
-                };
-
-            audio.play();
-
-            //兼容微信
-            document.addEventListener("WeixinJSBridgeReady", function () {
-                play();
-            }, false);
-
-            //兼容易信
-            document.addEventListener('YixinJSBridgeReady', function () {
-                play();
-            }, false);
-
-            document.addEventListener("touchstart", play, false);
-        }
+    <script>
+        document.addEventListener('DOMContentLoaded', function () { function audioAutoPlay() { var audio = document.getElementById('bg-music'); audio.play(); document.addEventListener("WeixinJSBridgeReady", function () { audio.play(); }, false); } audioAutoPlay(); });
     </script>
-    <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique omnis molestiae asperiores at, nobis odit ad possimus quia corporis. Ab cum esse repudiandae. Nihil ipsam error quis corrupti, perferendis tenetur!</span>
+</head>
+
+<body>
+    <audio style="display:none; height: 0" id="bg-music" preload="auto" src="w20210520.mp3" loop="loop"></audio>
+    <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique omnis molestiae asperiores at, nobis odit
+        ad possimus quia corporis. Ab cum esse repudiandae. Nihil ipsam error quis corrupti, perferendis tenetur!</span>
 </body>
+
 </html>
