--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="7ozOgsvx6eTUSUqTjuVtD3Xdfm-I1IN7VVwtHNGZpIY" />
     <title>欢迎来到我的个人网站</title>
     <style>
         body {
