--- a/annuals.html
+++ b/annuals.html
@@ -6,13 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>折腾记录</title>
-    <meta name="description" content="A list of all the projects that I have completed.">
-    <meta name="keywords" content="programming, projects, lists">
+    <meta name="description" content="把每年遇到的各种奇奇怪怪的事情，挑选若干，记录下来，以飨有缘之读者。">
+    <meta name="keywords" content="计算机技术, 个人文章, 年度总结">
     <meta name="author" content="方小">
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
-    <link rel="manifest" href="img/favicon/site.webmanifest">
     <link rel="stylesheet" type="text/css" href="styles/global.css">
 </head>
 
