--- a/projects.html
+++ b/projects.html
@@ -6,13 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>小作品</title>
-    <meta name="description" content="A list of all the projects that I have completed.">
-    <meta name="keywords" content="programming, projects, lists">
+    <meta name="description" content="一些愿意公开出来的代码，仅作学习参考，除著作权外，不做盈利之图。">
+    <meta name="keywords" content="代码, Github仓库, Python">
     <meta name="author" content="方小">
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
-    <link rel="manifest" href="img/favicon/site.webmanifest">
     <link rel="stylesheet" type="text/css" href="styles/global.css">
 </head>
 
