--- a/index.html
+++ b/index.html
@@ -1,43 +1,68 @@
 <!DOCTYPE html>
 <html lang="zh">
+<!-- https://fyqc.github.io/ 2/6/2023 -->
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>欢迎</title>
-    <meta name="description" content="Personal High-Tech Development Plan.">
+    <title>欢迎，欢迎！</title>
+    <meta name="description"
+        content="Introduce myself, my experience and past, and what I've been up to over the years.">
     <meta name="keywords" content="ideas, programming, Essays">
     <meta name="author" content="方小">
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
-    <link rel="stylesheet" type="text/css" href="styles/global.css">
+    <style>
+        body {
+            font-family: Helvetica, Tahoma, Arial, STHeiti, "Microsoft YaHei", SimSun;
+        }
+
+        .header {
+            text-align: center;
+        }
+
+        #articles {
+            border-bottom: 1px dashed #DDD;
+        }
+
+        #introduce p {
+            font-family: STKaiti;
+            padding: 0px 15px;
+        }
+    </style>
 </head>
 
 <body>
-    <nav>
-        <a href="./projects.html">小作品</a>
-        <!-- <a href="/ideas">心得</a>
-        <a href="/essays">小文集</a> -->
-        <a href="./annuals.html">折腾记录</a>
-    </nav>
-    <h1>欢迎，欢迎！</h1>
-    <div id="self-statement">
-        <p>吾人幼时，常立于群而佼佼为首，是为众人之环拱而称楷模。后因所学基础不实，三年应试而屡不中。于二十年秋，孑立白云山麓，知耻后勇，又遇恩师不倦教诲，虽于渣校亦作牛人。</p>
-        <p>跨洋求学，尝经甘苦，不辍寒暑，绩优卒业。横贯东西，奔波万里，求职大山之中，边陲小城。</p>
-        <p>入职数月，旋遭变故，去职年末风雪之中。辗转多地，艰难求职。食干面包，饮自来水，流浪于多伦多之街头，寄人篱下于加西同学处。每自徘徊奔波，动荡搬迁，几番郊外露宿，雨夜车中独寐，个中惨景，犹在昨日。</p>
-        <p>彷徨失措，颠沛流离，终复入职。越二年，赴美工作，而彼之山川壮丽，物产丰隆，物价平易，人民朴实，皆予余以深刻印象，非亲至实不能想象。</p>
-        <p>二十八年，赴京任职，初颇不适应，觉帝都实非良乡，不可久居。而细观芸芸之众生，无不辛勤劳作，以果其腹，见人群之熙攘，未有不努力奋斗而自我上进者。至地铁乘车，更有无数青年日夜逡巡，个中辛苦，历历在目。</p>
-        <p>又逢北国春来，四下鲜花满地，彩旗高展，万物蓬勃而弥新，恰逢其时，处京畿之东，更兼王气之所在，居高楼，临窗而览，气象万千。</p>
-        <p>余自驻华始，发昔日之宏愿，主动学习，认真钻研，努力拼搏，做人不愿做之功，以达人所不能之境。然二年，业务收缩，经营策略变动，遂签离职之协议，与诸好友别，复离华土。</p>
-        <p>返美历半年流民之苦，觅一临时职位，虽待遇勉强，工作条件辛苦恶劣，次年入我司。</p>
-        <p>自入职以来，诸事极顺，享誉四方，逢考试与培训未有不过者，且成绩皆为前列，实乃令人欢欣。遂安居以乐业，久漂泊于江湖，终有定居之所，甚幸哉。</p>
-        <p>三十三年，因史无前例之疫情，世界混乱，病毒横行，失业丛生，世界之政经情况为之巨变，我司亦以裁员为应。</p>
-        <p>家中赋闲数月，遂利用此闲暇之机，完成多年未竟之心愿，大行学习、锻炼、休整之事，以利来年。</p>
-        <p>自余离乡，迄今已十五年。昔年梦想决心之种种，实现者不及二三，有负他人则常有之，遗憾之至。</p>
-        <p>所见诸友，想他们于各自之人生，是非遭遇，愈觉吾人之幸运实也非常。思所定之目标，凡实现者寥寥无几，与吾人之初衷相去甚远者众。</p>
-        <p>余追求幸福之信念，集毕生之力以赴之，百折而不挠。</p>
-        <p>是时，值起复原职，百废待兴，万事在望。过去之积习甚久，虽万千理由，亦于事无补。惟珍惜时光，自当下始，努力奋斗，埋头苦干，终有事成之时。</p>
+    <div id="container">
+        <div class="header">
+            <h1>欢迎，欢迎！</h1>
+        </div>
+        <div id="articles">
+            <ul>
+                <li>
+                    <a href="./posts/annuals/2022.html" title="2022折腾记录">2022年折腾记录</a>
+                </li>
+                <li>
+                    <a href="./posts/annuals/2021.html" title="2021折腾记录">2021年折腾记录</a>
+                </li>
+                <li>
+                    <a href="./posts/annuals/2020.html" title="2020折腾记录">2020年折腾记录</a>
+                </li>
+            </ul>
+        </div>
+        <div id="introduce">
+            <p>吾自幼时众人环拱佼佼于群，考至白云山麓之渣校亦作牛人。</p>
+            <p>二十二年，跨洋求学，不辍寒暑，绩优卒业即辗转奔波万里，横贯东西求职：食干面包，饮自来水，流浪都市之街头，寄人篱下于同学处。每面试消息有之，即徘徊奔波动荡搬迁，聘于大山深处边陲小城。</p>
+            <p>入职数月即遭变故，去职风雪之中，几番郊外露宿，雨夜车中独寐。越二年，赴美工作，而彼之山川壮丽，物产丰隆，物价平易，人民朴实，皆予余以深刻印象，非亲至实不能想象也。</p>
+            <p>二十八年，派赴京任职，余自驻华始，每日辛苦学习，认真努力，做人不愿做之功，以达人所不能之境。逢北国春来，四下鲜花满地，彩旗高展，万物蓬勃而弥新，恰逢其时。处京畿之东，更兼王气之所在，居高楼，临窗而览，气象万千。至地铁乘车，无数青年日夜逡巡，芸芸无不辛勤以果其腹，人群熙攘，未有不努力奋斗而上进者。
+            </p>
+            <p>次年因美中交恶业绩不彰，又见诸友于各自之人生，是非遭遇，愈觉吾人之幸运实也非常，感帝都实非良乡，不可久居。遂签离职协议，与诸好友别，复离华土。返美历半年流民之苦，次年入我司。自入职以来，诸事极顺，享誉四方，逢培训与考试未有不过者，成绩前列令人欢欣。遂安居以乐业，久漂泊于江湖，终有定居之所，甚幸哉。
+            </p>
+            <p>自吾离乡，迄今已十五年余。昔年梦想决心之种种，凡实现者寥寥无几，与吾人之初衷相去甚远者众。有负他人之事则常有之，遗憾之至。虽万千理由，亦于事无补。惟珍惜时光，自当下始，努力奋斗，埋头苦干，终有事成之时。</p>
+            <p>余追求幸福之信念，集毕生之力以赴之，百折而不挠。</p>
+        </div>
     </div>
 </body>
 
