--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
         body {
             font-family: Helvetica, Tahoma, Arial, STHeiti, "Microsoft YaHei", SimSun;
         }
-
+        
+        #container {
+          max-width: 50rem;
+          margin-left: auto;
+          margin-right: auto;
+        }
+        
         .header {
             text-align: center;
         }
