--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         content="Introduce myself, my experience and past, and what I've been up to over the years.">
     <meta name="keywords" content="ideas, programming, Essays">
     <meta name="author" content="方小">
+    <meta name="google-site-verification" content="7ozOgsvx6eTUSUqTjuVtD3Xdfm-I1IN7VVwtHNGZpIY" />
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
