--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
         <div id="articles">
             <ul>
                 <li>
+                    <a href="./posts/annuals/2024.html" title="2024折腾记录">2024年折腾记录</a>
+                </li>
+                <li>
                     <a href="./posts/annuals/2023.html" title="2023折腾记录">2023年折腾记录</a>
                 </li>
                 <li>
@@ -64,15 +67,15 @@
             </ul>
         </div>
         <div id="introduce">
-            <p>吾自幼时众人环拱佼佼于群，考至白云山麓之渣校亦作牛人。</p>
-            <p>二十二年，跨洋求学，不辍寒暑，绩优卒业即辗转奔波万里，横贯东西求职：食干面包，饮自来水，流浪都市之街头，寄人篱下于同学处。每面试消息有之，即徘徊奔波动荡搬迁，聘于大山深处边陲小城。</p>
-            <p>入职数月即遭变故，去职风雪之中，几番郊外露宿，雨夜车中独寐。越二年，赴美工作，而彼之山川壮丽，物产丰隆，物价平易，人民朴实，皆予余以深刻印象，非亲至实不能想象也。</p>
-            <p>二十八年，派赴京任职，余自驻华始，每日辛苦学习，认真努力，做人不愿做之功，以达人所不能之境。逢北国春来，四下鲜花满地，彩旗高展，万物蓬勃而弥新，恰逢其时。处京畿之东，更兼王气之所在，居高楼，临窗而览，气象万千。至地铁乘车，无数青年日夜逡巡，芸芸无不辛勤以果其腹，人群熙攘，未有不努力奋斗而上进者。
+            <p>吾自幼聪慧，群中翘楚，及至白云山麓之渣校，亦作牛人。</p>
+            <p>二十二年，负笈重洋，寒暑不辍，绩优而卒，旋即辗转万里，横贯东西求职：食干面包，饮自来水，流浪都市，寄身同学篱下。每逢面试消息传来，便收拾行囊，奔波漂泊，终得一职，隐身大山深处边陲小城。</p>
+            <p>未几，职场遭变，风雪辞去，几度露宿郊外，雨夜车中独寐。越二年，赴美工作。彼邦山川壮丽，物产丰饶，物价平易，民风朴实，予余以深刻之印象，非亲历者不能想象也。</p>
+            <p>二十八年，派赴京师，驻华自始，每日勤勉，孜孜不辍，凡人所不愿为者，吾必躬行；达人所难至者，吾亦力求。北国春来，百花盛放，彩旗高展，万物蓬勃。京畿之东，王气所钟，登高楼而远眺，气象万千。每入地铁，观芸芸众生，熙攘奔波，无不为生计拼搏，奋斗向上，蔚然可敬。
             </p>
-            <p>次年因美中交恶业绩不彰，又见诸友于各自之人生，是非遭遇，愈觉吾人之幸运实也非常，感帝都实非良乡，不可久居。遂签离职协议，与诸好友别，复离华土。返美历半年流民之苦，次年入我司。自入职以来，诸事极顺，享誉四方，逢培训与考试未有不过者，成绩前列令人欢欣。遂安居以乐业，久漂泊于江湖，终有定居之所，甚幸哉。
+            <p>次年，因美中交恶，业绩不彰，复见诸友人生沉浮，是非遭遇，愈觉吾人之幸运非常。然感帝都非久居之地，遂签离职书，与挚友别，复离华土。返美半年，流离失所，飘零如浮萍；次年入我司，始得安稳。自此诸事顺遂，誉享四方，凡培训、考试，未尝一败，成绩翘楚，令人欣慰。久漂江湖，终得一隅安居乐业，幸哉！
             </p>
-            <p>自吾离乡，迄今已十五年余。昔年梦想决心之种种，凡实现者寥寥无几，与吾人之初衷相去甚远者众。有负他人之事则常有之，遗憾之至。虽万千理由，亦于事无补。惟珍惜时光，自当下始，努力奋斗，埋头苦干，终有事成之时。</p>
-            <p>余追求幸福之信念，集毕生之力以赴之，百折而不挠。</p>
+            <p>吾别乡十五载，昔年理想抱负，成者寥寥，与初心相去甚远。负他人之事常有，遗憾尤深。然万千理由，终难弥补。惟珍惜光阴，自当下始，埋首苦干，矢志不移，终有所成。</p>
+            <p>吾信幸福可求，故集毕生之力，百折不挠，奋勇以赴。</p>
         </div>
     </div>
 </body>
