--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
             font-family: STKaiti;
             padding: 0px 15px;
         }
+
+        #next-gen {
+            font-family: "PingFang TC", "Microsoft JhengHei", Helvetica, Tahoma, Arial, STHeiti, "Microsoft YaHei", SimSun;
+            color: white;
+        }
     </style>
 </head>
 
@@ -76,6 +81,16 @@
             </p>
             <p>吾别乡十五载，昔年理想抱负，成者寥寥，与初心相去甚远。负他人之事常有，遗憾尤深。然万千理由，终难弥补。惟珍惜光阴，自当下始，埋首苦干，矢志不移，终有所成。</p>
             <p>吾信幸福可求，故集毕生之力，百折不挠，奋勇以赴。</p>
+        </div>
+        <br>
+        <div id="next-gen">
+            <p>余自幼穎悟，群倫之中，卓然特出。及長，入白雲山麓之陋校，亦為俊傑。</p>
+            <p>年二十有二，負笈遠涉重洋，寒暑不懈，學業優成，卒業遂畢。後輾轉萬里，橫貫東西，求職於世。食乾糧，飲泉水，流寓都市，寄身同窗籬下。每聞試事之訊，則收拾行囊，奔波四方，終獲一職，隱於大山深處，邊陲小邑。</p>
+            <p>未幾，職場生變，風雪辭去，屢露宿於野，雨夜獨寐車中。越二年，赴美從事。彼地山川壯麗，物阜民豐，價廉俗厚，予余深印，非親歷莫能喻也。</p>
+            <p>年二十有八，受命赴京師，自此駐華，日日勤勉，孜孜不倦。凡人所不欲為，余必躬踐；賢者所難至，余亦力爭。北國春至，百花爭妍，彩旗高揚，萬物勃興。京畿東地，王氣鍾焉，登高樓遠矚，景象萬千。每入地鐵，觀眾生熙攘，奔走謀生，皆奮鬥向上，令人敬佩。</p>
+            <p>翌年，美中交病，業績不振，又見友朋浮沉，得失交錯，愈感余之幸甚。然帝都非久居之地，遂署離職之書，與摯友訣，復離華境。返美半載，流離無依，飄零若萍；次年入今司，始得安穩。自後諸事順遂，聲譽四播，凡訓試之事，未嘗敗績，成績翹然，慰人心懷。久漂江湖，終覓一隅，安居樂業，幸甚！</p>
+            <p>余別鄉十有五載，昔志高遠，成者寥寥，與初心遠矣。負人之事屢存，憾尤深。雖萬端理由，難補缺憾。惟當惜時，自今始，埋首力耕，矢志不渝，終有所就。</p>
+            <p>余堅信幸福可求，故傾畢生之力，百折不回，奮勇前行。</p>
         </div>
     </div>
 </body>
